[package]
name = "lndbalancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
config = "0.14.0"
features = "0.10.0"
futures = "0.3.30"
hex = "0.4.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.36.0", features = ["full"] }
tonic_lnd = { path = "../../tonic_lnd" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
warp = "0.3.7"
